# all3-intelligence-bot

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: bootstrap-radar-state.yml  claude-final-card-preview.yml  digest-vote.yml  radar-replay.yml  radar-scheduler.yml  radar-state-snapshot.yml  radar.yml  telegram-shortlist-poll.yml  tests.yml  web-discovery.yml  weekly-claude-review.yml  weekly-digest.yml
.gitlab/state-seed/: README.md
config/: competitors.yaml  digest_overrides.json  editorial_memory_presets.yaml  editorial_memory_rules.yaml  editorial_memory_seed_examples.json  ranking_rules.yaml  settings.yaml  sources.yaml  topic_rules.yaml  web_discovery.yaml
docs/: architecture.md  editorial_rules.md  operations.md  source_inventory.md  web-discovery.md
scripts/: claude_final_card_preview.py  dispatch_news_radar.ps1  gitlab_ci_state.py  import_sqlite_to_turso.py  inspect_db.py  run_radar.py  run_weekly_digest.py  send_weekly_digest.py  set_repo_variables.ps1  trigger_news_radar_scheduler.ps1  web_discovery_preview.py
src/all3_radar/: __init__.py
tests/fixtures/: destatis_press_listing.html  hrt_generative_bionics_article.html  hrt_hexagon_article.html  hrt_listing.html  hrt_listing_live_like.html  hrt_sereact_article.html  sample_direct_feed.xml
tests/integration/: test_construction_news_collection.py  test_destatis_collection.py  test_digest_build.py  test_hrt_collection.py  test_radar_collection.py  test_replay_service.py
tests/unit/: test_claude_digest_client.py  test_claude_editorial_review_client.py  (+46 more)
(+88 files in other folders)
