[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "new-all3-radar-bot"
version = "0.1.0"
description = "Clean rebuild of the All3 radar and weekly digest bots"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "libsql>=0.1.8",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
